syntax = "proto3";
package inventory;
option go_package = "github.com/ralvescosta/ec2-hellow-world/protos";

import "google/protobuf/timestamp.proto";

enum Category {
  UNKNOWN_CATEGORY = 0;
  A = 1;
  B = 2;
  C = 3;
}

message Product {
  bytes id = 1;
  string name = 2;
  Category category = 3;
  float price = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

enum Ordination {
  UNKNOWN_ORDER = 0;
  ASC = 1;
  DESC = 2;
}

message CreateProductRequest {
  string name = 1;
  Category category = 2;
  float price = 3;
}

message CreateProductResponse {
  Product product = 1;
}

message ListProductsRequest {
  int32 limit = 1;
  int32 offset = 2;
  optional Category category = 3;
  optional Ordination ordination = 4;
}

message ListProductsResponse {
  repeated Product products = 1;
}

service Products {
  rpc Create(CreateProductRequest) returns (CreateProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}